feat(members): add api and generate open api
