# api/src/http/mod.rs
@@ -1,4 +1,5 @@
 pub mod friend;
 pub mod health;
 pub mod server;
+pub mod server_members;
 pub mod servers;
